extra space solve for mobile device

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -62,7 +62,7 @@
  @apply bg-black p-2 text-white rounded-md cursor-pointer;
  }
  .UniversalPadding{
-  @apply px-4 sm:px-6 md:px-10 lg:px-0;
+  @apply sm:px-6 md:px-10 lg:px-0;
 }
 .main{
   @apply pb-10 md:mb-5 lg:pb-0;
